# VehicleControl

./: README.md
car_demo/: CMakeLists.txt
car_demo/conf/: control_conf.txt
car_demo/include/car_demo/: Common.h  Control.h  TrajectoryAnalyzer.h  VehicleState.h
car_demo/launch/: empty.launch  position_test.launch  publish_mat_trajectory.launch  publish_ontime_trajectory.launch  publish_recorded_trajectory.launch  publish_reverse_trajectory.launch  publish_trajectory_with_slope.launch  record_trajectory.launch  run_in_empty_world.launch  run_in_empty_world_reverse.launch  run_in_ramp.launch  run_in_simulation_world.launch  run_in_true_trajectory.launch  run_with_carsim.launch  trajectory_plot.launch
car_demo/multi_launch/: carsim.sh  empty_world.sh  forward.sh  reverse.sh  run_in_ramp.sh  simulated_world.sh  true_trajectory.sh
car_demo/plot_py/: read_data.py  result_plot.py  simulation_result.txt
car_demo/plugins/: PriusHybridPlugin.cc  PriusHybridPlugin.hh
car_demo/scripts/: TrajectoryPlotter.py  trajectory_plotter.py
car_demo/src/: Common.cpp  Control.cpp  Main.cpp  TrajectoryAnalyzer.cpp  VehicleState.cpp  local_planning.cpp  publish_path_cyclically.cpp  publish_path_once.cpp
car_demo/src/Controller/: Controller.cpp  (+9 more)
car_demo/test_trajectories/: mat_trajectory_10.txt  mat_trajectory_15.txt  mat_trajectory_20.txt  mat_trajectory_25.txt  recorded_trajectory_1_record.txt
car_demo/worlds/: mcity.world  mcity_2.world
prius_msgs/: CMakeLists.txt
prius_msgs/msg/: Augmented_My_Trajectory_Point.msg  My_Trajectory.msg  My_Trajectory_Point.msg
(+11 files in other folders)
